# lixunomen

./: .gitignore  README.md  install.sh  install_arch.sh  omen-linux.desktop  pyproject.toml
src/omen_linux/: __init__.py  fan_control.py  hp_wmi.py  main.py  temperature.py
src/omen_linux/ui/: __init__.py  popup.py
systemd/: omen-linux-user.service  omen-linux.service
udev/: 99-hp-omen.rules
