[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omen-linux"
version = "1.0.0"
description = "Lightweight fan control for HP OMEN laptops on Linux"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
authors = [
    {name = "OmenHubLighter Contributors"}
]
keywords = ["hp", "omen", "fan", "control", "linux", "victus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
]
dependencies = [
    "psutil>=5.9.0",
    "PyGObject>=3.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.scripts]
omen-linux = "omen_linux.main:main"

[project.urls]
Homepage = "https://github.com/Joery-M/OmenHubLighter"
Repository = "https://github.com/Joery-M/OmenHubLighter"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']
